--- a/config-infra-prod.yml
+++ b/config-infra-prod.yml
@@ -9,11 +9,10 @@ variables:
 
   namespace: mlopslite #Note: A namespace with many characters will cause storage account creation to fail due to storage account names having a limit of 24 characters.
   postfix: 0004
-  location: westus
+  location: westeurope
   environment: prod
   enable_aml_computecluster: true
   enable_aml_secure_workspace: false
-
 
 
   # Azure DevOps
