--- a/config-infra-prod.yml
+++ b/config-infra-prod.yml
@@ -11,6 +11,10 @@ variables:
   postfix: 0004
   location: eastus
   terraform_st_location: eastus
+  terraform_st_resource_group: rg-mlops-sp-terraform
+  terraform_st_storage_account: mlopstfstate
+  terraform_st_container_name: tfstate
+  terraform_st_key: mlops-tfstate
   environment: prod
   enable_aml_computecluster: true
   enable_aml_secure_workspace: false
