--- a/config-infra-prod.yml
+++ b/config-infra-prod.yml
@@ -15,6 +15,8 @@ variables:
   terraform_st_storage_account: mlopstfstatefpt
   terraform_st_container_name: tfstate
   terraform_st_key: mlops-tfstate
+  terraform_workingdir: 'terraform'
+  terraform_version: 1.5.7
   environment: prod
   enable_aml_computecluster: true
   enable_aml_secure_workspace: false
