Refactor resource group and AML workspace definitions in config-infra-prod.yml

--- a/config-infra-prod.yml
+++ b/config-infra-prod.yml
@@ -37,6 +37,8 @@ variables:
   # DO NOT TOUCH
 
   # For pipeline reference
-  resource_group: rg-$(namespace)-$(postfix)-$(environment)
-  aml_workspace: mlw-$(namespace)-$(postfix)-$(environment)
+  # resource_group: rg-$(namespace)-$(postfix)-$(environment)
+  # aml_workspace: mlw-$(namespace)-$(postfix)-$(environment)
+  resource_group: mlops
+  aml_workspace: mlklowen
 
