--- a/.github/workflows/deploy-model-training-pipeline-classical.yml
+++ b/.github/workflows/deploy-model-training-pipeline-classical.yml
@@ -17,6 +17,11 @@ jobs:
         conda_file: data-science/environment/train-conda.yml
       secrets:
           creds: ${{secrets.AZURE_CREDENTIALS}}
+          azure_creds: ${{ secrets.AZURE_CREDENTIALS }}
+          clientId: ${{ secrets.ARM_CLIENT_ID }}
+          clientSecret: ${{ secrets.ARM_CLIENT_SECRET }}
+          subscriptionId: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          tenantId: ${{ secrets.ARM_TENANT_ID }}
           
   register-dataset:
     needs: get-config
